Added line graph and caching on strava method

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
         <div class="col-xs-3">
             <label> Choose the plot type....</label>
             <select class="form-control" id ='first_cat'>
+                <option value="Line">Line</option>
                 <option value="Bar">Bar</option>
-                <option value="Scatter">Scatter</option>
             </select>
         </div>
         <div class="col-md-6">
